@@ -1,3 +1,7 @@
+2007-09-01  Ville Vainio  <vivainio@gmail.com>
+
+	* ipmaker.py: Always show full traceback when newstyle config fails
+
 2007-08-27  Ville Vainio  <vivainio@gmail.com>
 
 	* Magic.py: fix %cd for nonexistent dir when dhist is empty, close #180
